feat: implement user management CRUD and avatar upload to minio
